# localdev

./: Cargo.toml  README.md  zsh-setup
src/: cli.rs  main.rs
