[package]
name = "localdev"
version = "0.1.0"
edition = "2021"
description = "Manage the Nginx web server on localhost"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.5"
clap = { version = "3.1.17", features = ["derive"] }
clap_complete = "3.1.4"
webbrowser = "0.7.1"
colored = "2.0.0"
